@@ -2,7 +2,9 @@
 """
 import logging
 from zope.interface import implements
+from zope.component import queryUtility
 from eea.app.visualization.interfaces import IVisualizationData
+from eea.app.visualization.interfaces import IExternalData
 
 logger = logging.getLogger('eea.daviz')
 
@@ -18,5 +20,11 @@ class DavizVisualization(object):
     def data(self):
         """ Data to be converted to JSON
         """
-        field = self.context.getField('spreadsheet')
-        return field.getAccessor(self.context)()
+        external = self.context.getField('external')
+        url = external.getAccessor(self.context)()
+        if url:
+            data = queryUtility(IExternalData)
+            return data(url) if data else u''
+        else:
+            field = self.context.getField('spreadsheet')
+            return field.getAccessor(self.context)()
