@@ -4,6 +4,19 @@
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="eea">
 
+  <!-- 6.0 => 6.1 -->
+  <genericsetup:upgradeSteps
+    source="6.0"
+    destination="6.1"
+    profile="eea.daviz:default">
+
+    <genericsetup:upgradeDepends
+      title="Import modified steps from eea.daviz profile: typeinfo"
+      import_steps="typeinfo"
+      />
+
+  </genericsetup:upgradeSteps>
+
   <!-- 4.9 => 6.0 -->
   <genericsetup:upgradeSteps
     source="4.9"
